# fractal-time-series-compression

./: README.md  __init__.py  colab_setup.py  fractal_compression_colab.ipynb  fractal_compression_demo.ipynb  pyproject.toml  requirements.txt
src/compression/: base_compressor.py  fractal_coding.py  ifs_compression.py
src/data/: generator.py  loader.py
src/decompression/: fractal_interpolation.py
src/examples/: demo.py  quick_demo.py
src/utils/: metrics.py  plotting.py
tests/: test_compression.py
